<resources>
    <string name="app_name">MyHotel</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="hotelName">MyHotel</string>
    <string name="hotelSite">www.myhotel.com</string>
    <string name="hotelEmail">mehearthotel@gmail.com</string>
    <string name="home">Home Screen</string>
    <string name="rooms">Rooms</string>
    <string name="room">Room</string>
    <string name="reservation">Reservation</string>
    <string name="myprofile">My profile</string>
    <string name="special">Special Offers</string>
    <string name="info">Tourist Information</string>
    <string name="gallery">Gallery</string>
    <string name="title_activity_deals">Special Deals</string>
    <string name="welcomeHome">Welcome to meHeartHotel</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="re_email">Email verify</string>
    <string name="signup">Sign up</string>
    <string name="login">Login</string>
    <string name="title_activity_reservation">Reservation</string>
    <string name="arrivalDateHint">Arrival date</string>
    <string name="departDateHint">Depart date</string>
    <string name="arrive">Arrive</string>
    <string name="depart">Depart</string>
    <string name="defultStay">1 night</string>
    <string name="title_activity_rooms">Rooms</string>
    <string name="title_activity_info">Tourist information</string>
    <string name="title_activity_my_profile">MyProfile</string>
    <string name="persons">Persons</string>
    <string name="adults18">Adults(+18)</string>
    <string name="adults">Adults</string>
    <string name="children">Children</string>
    <string name="continueReservation">Continue Reservation</string>
    <string name="_continue">Continue</string>
    <string name="cancel">Cancel</string>
    <string name="book">Book it!</string>
    <string name="room_1_description">Premium Suite</string>
    <string name="room_2_description">Supreme Suite</string>
    <string name="room_3_description">Junior Suite</string>
    <string name="room_4_description">Dreams Luxury Suite</string>
    <string name="room_5_description">Classic Suite</string>
    <string name="room_6_description">Penthouse Luxury Suite</string>
    <string name="room_7_description">Deco Superior Apartment</string>
    <string name="room_list_title">Specify your rooms</string>
    <string name="explanation">(click to choose type)</string>
    <string name="keeplogged">Keep me logged in</string>
    <string name="member">Member?</string>
    <string name="not_member">Not a Member?</string>
    <string name="edit_username">Edit username</string>
    <string name="edit_email">Edit email</string>
    <string name="change_password">Change password</string>
    <string name="reservation_history">Reservation history</string>
    <string name="reservation_upcoming">Upcoming Reservations</string>
    <string name="enter_input">Enter your input</string>
    <string name="set_changes">Set changes</string>
    <string name="price">Price</string>
    <string name="avilabilty">Avilabilty</string>
    <string name="left">left</string>
    <string name="proceed">Proceed</string>
    <string name="type">Type</string>
    <string name="total">Total</string>
    <string name="booking_details">Booking details</string>
    <string name="check_in">Check-in</string>
    <string name="check_out">Check-out</string>
    <string name="booking_summary">Booking summary</string>
    <string name="noti_title">Reservation remainder</string>
    <string name="noti_msg">You have a reservation on:</string>
    <string name="noti_text">Enjoy your stay at MeHeartHotel!</string>
    <string name="currency">USD</string>
    <string name="contact_change_res">Change my reservation</string>
    <string name="contact_cancel_res">Cancel my reservation</string>
    <string name="contact_feedback">Feedback on my hotel stay</string>
    <string name="contact_technical_issue">Technical issue</string>
    <string name="contact_general_issue">General issue</string>
    <string name="contact_other">Other</string>
    <string name="contact_subject_hint">Pick your subject</string>
    <string name="sender_email">Enter sender e-mail address</string>
    <string name="write_your_text">Write your text here</string>
    <string name="contact_title">Contact</string>
    <string name="contact_no_subject_picked">You have to pick a subject for your email</string>
    <string name="hello">"Hello"</string>
    <string name="res_number">reservation number:</string>
    <string name="nights">Nights</string>
    <string name="go_to_reservation">Go to Reservation</string>

</resources>
