<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_rooms"
            android:icon="@drawable/ic_gallery_2"
            android:title="@string/rooms" />
        <item
            android:id="@+id/nav_reserv"
            android:icon="@drawable/ic_reservation_2"
            android:title="@string/reservation" />
        <item
            android:id="@+id/nav_myprofile"
            android:title="@string/myprofile"
            android:icon="@drawable/ic_users"/>
        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/ic_info2"
            android:title="@string/info" />
    </group>
    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_contact"
                android:icon="@android:drawable/ic_dialog_email"
                android:title="@string/contact_title" />
        </menu>
    </item>

</menu>
