<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_screen_fragment_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="hyperactive.co.il.mehearthotel.HomeScreenActivity"
    android:background="@drawable/mainbackground">

    <EditText
        android:layout_centerHorizontal="true"
        android:id="@+id/usernameEt"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_large_height"
        android:hint="@string/username"
        />
    <EditText
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_large_height"
        android:hint="@string/password"
        android:id="@+id/passwordEt"
        android:layout_below="@id/usernameEt"/>
    <TextView
        android:textAlignment="center"
        android:textSize="@dimen/mediumSizeFont"
        android:layout_margin="@dimen/smallPadding"
        android:background="@drawable/textviewbackgroundshape"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/loginBtn"
        android:layout_below="@id/passwordEt"/>
    <TextView
        android:textAlignment="center"
        android:textSize="@dimen/mediumSizeFont"
        android:layout_margin="@dimen/smallPadding"
        android:background="@drawable/textviewbackgroundshape"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:id="@+id/signupBtn"
        android:layout_below="@id/loginBtn"/>
    <CheckBox
        android:id="@+id/keeplogged_checkbox"
        android:text="@string/keeplogged"
        android:layout_below="@id/signupBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</RelativeLayout>
