<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_screen_fragment_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mainbackground"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="hyperactive.co.il.mehearthotel.HomeScreenActivity">

    <EditText
        android:id="@+id/usernameEt"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_large_height"
        android:layout_centerHorizontal="true"
        android:hint="@string/username" />

    <EditText
        android:id="@+id/passwordEt"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_large_height"
        android:layout_below="@id/usernameEt"
        android:layout_centerHorizontal="true"
        android:hint="@string/password" />

    <LinearLayout
        android:gravity="center_horizontal"
        android:id="@+id/linear_buttons_conatiner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordEt"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/loginBtn"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/smallPadding"
            android:background="@drawable/textviewbackgroundshape"
            android:text="@string/login"
            android:textAlignment="center"
            android:textSize="@dimen/mediumSizeFont" />

        <TextView
            android:layout_weight="1"
            android:id="@+id/cancelBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/smallPadding"
            android:background="@drawable/textviewbackgroundshape"
            android:text="@string/cancel"
            android:textAlignment="center"
            android:textSize="@dimen/mediumSizeFont" />


    </LinearLayout>

    <CheckBox
        android:id="@+id/keeplogged_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_buttons_conatiner"
        android:text="@string/keeplogged" />
</RelativeLayout>
