<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/myprofile_conatiner"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center_horizontal|center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/myprofile_not_logged_memeberTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/member"
            android:textSize="@dimen/titelSize" />

        <TextView
            android:id="@+id/myprofile_loginBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/smallPadding"
            android:background="@drawable/btn_background"
            android:paddingBottom="@dimen/btn_top_bottom_padding"
            android:paddingLeft="@dimen/btn_side_padding"
            android:paddingRight="@dimen/btn_side_padding"
            android:paddingTop="@dimen/btn_top_bottom_padding"
            android:text="@string/login"

            android:textColor="@color/btn_color"
            android:textSize="@dimen/btn_text_size" />

        <TextView
            android:id="@+id/myprofile_not_logged_not_memeberTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_member"
            android:textSize="@dimen/mediumSizeFont" />

        <TextView
            android:id="@+id/myprofile_signupBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/smallPadding"
            android:background="@drawable/btn_background"
            android:paddingBottom="@dimen/btn_top_bottom_padding"
            android:paddingLeft="@dimen/btn_side_padding"
            android:paddingRight="@dimen/btn_side_padding"
            android:paddingTop="@dimen/btn_top_bottom_padding"
            android:text="@string/signup"
            android:textSize="@dimen/btn_text_size" />
    </LinearLayout>

</RelativeLayout>