<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/signupFragmentContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimary15transparent"
    android:gravity="center|center_horizontal"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/ic_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_margin="@dimen/ic_close_margin"
        android:background="@drawable/close_states" />

    <EditText
        android:id="@+id/signUp_usernameEt"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_large_height"
        android:layout_below="@+id/ic_close"
        android:hint="@string/username"
        android:textColorHint="@color/textColor"
         />

    <EditText
        android:id="@+id/signUp_emailEt"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_large_height"
        android:layout_below="@+id/signUp_usernameEt"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/textColor"
        android:textColorHint="@color/textColor" />

    <EditText
        android:id="@+id/signUp_emailVerifyEt"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_large_height"
        android:layout_below="@+id/signUp_emailEt"
        android:hint="@string/re_email"
        android:inputType="textEmailAddress"
        android:textColor="@color/textColor"
        android:textColorHint="@color/textColor" />

    <EditText
        android:id="@+id/signUp_passwordEt"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_large_height"
        android:layout_below="@+id/signUp_emailVerifyEt"
        android:layout_centerHorizontal="true"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/textColor"
        android:textColorHint="@color/textColor" />

    <Button
        android:id="@+id/signUp_cuntinueBtn"
        android:layout_marginBottom="@dimen/btn_signup_top_buttom_margin"
        android:layout_marginTop="@dimen/btn_signup_top_buttom_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signUp_passwordEt"
        android:layout_centerHorizontal="true"
        android:background="@drawable/btn_background"
        android:paddingLeft="@dimen/btn_side_padding"
        android:paddingRight="@dimen/btn_side_padding"
        android:paddingBottom="@dimen/btn_top_bottom_padding"
        android:paddingTop="@dimen/btn_top_bottom_padding"
        android:text="@string/_continue"
        android:textSize="@dimen/btn_text_size"
        android:textColor="@color/btn_color" />


</RelativeLayout>