<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary15transparent"
    android:padding="@dimen/input_dialog_padding"
    android:minWidth="300dp">
    <ImageView
       android:layout_gravity="right"
        android:layout_margin="@dimen/ic_close_margin"
        android:background="@drawable/close_states"
        android:id="@+id/ic_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:gravity="center"
        android:textSize="@dimen/btn_text_size"
        android:id="@+id/contact_title"
        android:text="@string/contact_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <View
        style="@style/Divider"

        android:background="@color/textColor" />
    <Spinner
        android:id="@+id/contact_subjects_spinner"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:textColorHint="@color/textColor"
        android:textColor="@color/textColor"
        android:gravity="center"
        android:hint="@string/write_your_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:lines="8"
        android:id="@+id/contact_email_body_Et" />
    <Button
        android:layout_margin="5dp"
        android:textColor="@color/btn_color"
        android:textSize="@dimen/btn_text_size"
        android:paddingRight="@dimen/btn_side_padding"
        android:paddingLeft="@dimen/btn_side_padding"
        android:paddingTop="@dimen/btn_top_bottom_padding"
        android:paddingBottom="@dimen/btn_top_bottom_padding"
        android:background="@drawable/btn_background"
        android:id="@+id/contact_continueBtn"
        android:layout_gravity="center"
        android:text="@string/_continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>